feat: upgrade to rocm 5.5.1

--- a/rocm-gfx803-pytorch-base/Dockerfile
+++ b/rocm-gfx803-pytorch-base/Dockerfile
@@ -22,7 +22,7 @@ ARG NUM_CPU_CORES
 ARG OPENBLAS_VERSION
 ARG OPENBLAS_INSTALL_PREFIX
 
-FROM ulyssesrr/rocm-gfx803-dev:ubuntu${UBUNTU_VERSION}-rocm${ROCM_VERSION}-complete
+FROM ulyssesrr/rocm-xtra-dev:ubuntu${UBUNTU_VERSION}-rocm${ROCM_VERSION}-complete
 
 ARG UBUNTU_VERSION
 ARG ROCM_ARCH
