--- a/rocm-xtra-dev/Dockerfile
+++ b/rocm-xtra-dev/Dockerfile
@@ -6,6 +6,7 @@ ARG ROCM_PATCH_VERSION
 ARG ROCM_BUILD_NUMBER
 ARG ROCM_LIBPATCH_VERSION
 ARG ROCM_VERSION
+ARG ROCM_VERSION_DOCKER
 ARG MAGMA_VERSION
 ARG ROCBLAS_BASE_URL
 ARG ROCBLAS_FILE
@@ -19,7 +20,9 @@ ARG GFX803_DIST_TORCH_WHEEL
 ARG GFX803_DIST_TORCHVISION_WHEEL
 ARG NUM_CPU_CORES
 
-FROM rocm/dev-ubuntu-${UBUNTU_VERSION}:${ROCM_VERSION}-complete
+FROM ulyssesrr/rocm-xtra-rocblas-builder:ubuntu${UBUNTU_VERSION}_rocm${ROCM_VERSION} as rocblas-package-builder
+
+FROM rocm/dev-ubuntu-${UBUNTU_VERSION}:${ROCM_VERSION_DOCKER}-complete
 
 ARG UBUNTU_VERSION
 ARG ROCM_ARCH
@@ -44,17 +47,14 @@ ARG NUM_CPU_CORES
 
 LABEL org.opencontainers.image.authors="Ulysses R. Ribeiro <ulyssesrr@gmail.com>"
 
-# install rocblas
-RUN curl -L $ROCBLAS_BASE_URL/$ROCBLAS_FILE --output $ROCBLAS_FILE \
-    && dpkg -i ./${ROCBLAS_FILE} \
-    && rm -f ./${ROCBLAS_FILE}
+# replace rocblas with fixed version
+WORKDIR /tmp/rocblas
+COPY --from=rocblas-package-builder /rocblas-deb/*.deb .
 
-# install rocblas-dev
-RUN curl -L $ROCBLAS_BASE_URL/$ROCBLAS_DEV_FILE --output $ROCBLAS_DEV_FILE \
-    && dpkg -i ./${ROCBLAS_DEV_FILE} \
-    && rm -f ./${ROCBLAS_DEV_FILE}
+RUN dpkg -i /tmp/rocblas/*.deb \
+    && rm -f /tmp/rocblas/*.deb
 
-# apt install git python-is-python3
+# apt install utilities
 RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
     git \
     python-is-python3 \
