feat: use ubuntu 22;04 images as base

--- a/rocm-gfx803-detectron2/Dockerfile
+++ b/rocm-gfx803-detectron2/Dockerfile
@@ -5,7 +5,8 @@ LABEL org.opencontainers.image.authors="Ulysses R. Ribeiro <ulyssesrr@gmail.com>
 WORKDIR /tmp
 
 # install detectron2 deps
-RUN apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
+RUN --mount=type=cache,target=/var/cache/apt,rw --mount=type=cache,target=/var/lib/apt,rw \
+    apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
         python3.8-dev \
         git \
         && rm -rf /var/lib/apt/lists/*
