--- a/rocm-xtra-llamacpp/Dockerfile
+++ b/rocm-xtra-llamacpp/Dockerfile
@@ -5,7 +5,6 @@ ARG ROCM_MINOR_VERSION
 ARG ROCM_PATCH_VERSION
 ARG ROCM_BUILD_NUMBER
 ARG ROCM_VERSION
-ARG PYTHON_VERSION
 ARG PYTORCH_VERSION
 ARG PYTORCH_VISION_VERSION
 ARG NUM_CPU_CORES
@@ -19,7 +18,6 @@ ARG ROCM_MINOR_VERSION
 ARG ROCM_PATCH_VERSION
 ARG ROCM_BUILD_NUMBER
 ARG ROCM_VERSION
-ARG PYTHON_VERSION
 ARG PYTORCH_VERSION
 ARG PYTORCH_VISION_VERSION
 ARG NUM_CPU_CORES
@@ -34,7 +32,7 @@ WORKDIR /git
 
 RUN git clone ${LLAMACPP_REPO_URL} llamacpp \
     && cd llamacpp \
-    && git fetch origin pull/${LLAMACPP_HIPBLAS_PULL_ID}/head:hipblas \
+    && git fetch origin pull/1087/head:hipblas \
     && git checkout hipblas \
     && git checkout ${LLAMACPP_HIPBLAS_PULL_HASH}
 
@@ -43,10 +41,13 @@ WORKDIR /git/llamacpp
 #COPY patches /patches
 #RUN git -C /git/llamacpp apply /patches/build-all-gfx-archs.patch
 
+
 # build with hipBLAS
+ARG ROCM_ALL_ARCH_SPACED
 ENV HIPCC_COMPILE_FLAGS_APPEND="-parallel-jobs=${NUM_CPU_CORES}"
 ENV HIPCC_LINK_FLAGS_APPEND="-parallel-jobs=${NUM_CPU_CORES}"
-RUN make -j${NUM_CPU_CORES} LLAMA_HIPBLAS=1 GPU_TARGETS="$(ls /opt/rocm/lib/rocblas/library/TensileLibrary_lazy_*.dat | grep -o 'gfx[0-9a-z]*')"
+RUN make -j${NUM_CPU_CORES} LLAMA_HIPBLAS=1 GPU_TARGETS="${ROCM_ALL_ARCH_SPACED}"
+#GPU_TARGETS="$(ls /opt/rocm/lib/rocblas/library/TensileLibrary_lazy_*.dat | grep -o 'gfx[0-9a-z]*')"
 
 # add llama.cpp to path
 ENV PATH="/git/llamacpp:$PATH"
