--- a/rocm-xtra-pytorch-builder/Dockerfile
+++ b/rocm-xtra-pytorch-builder/Dockerfile
@@ -24,8 +24,6 @@ ARG NUM_CPU_CORES
 
 LABEL org.opencontainers.image.authors="Ulysses R. Ribeiro <ulyssesrr@gmail.com>"
 
-WORKDIR /git
-
 # pytorch deps
 RUN --mount=type=cache,target=/var/cache/apt,rw --mount=type=cache,target=/var/lib/apt,rw \
     apt-get update && DEBIAN_FRONTEND=noninteractive apt-get install -y --no-install-recommends \
@@ -46,9 +44,16 @@ ENV MAX_JOBS=${NUM_CPU_CORES}
 ## torch deps
 RUN pip install astunparse numpy ninja pyyaml setuptools cmake cffi typing_extensions future six requests dataclasses
 
-RUN git clone --depth 1 --branch v${PYTORCH_VERSION} --recursive https://github.com/pytorch/pytorch.git
+#RUN git clone --depth 1 --branch v${PYTORCH_VERSION} --recursive https://github.com/pytorch/pytorch.git
 
-WORKDIR /git
+
+RUN --mount=type=cache,target=/tmp/cache/download,rw \
+    curl -L -o /tmp/cache/download/pytorch-v${PYTORCH_VERSION}.tar.gz https://github.com/pytorch/pytorch/releases/download/v${PYTORCH_VERSION}/pytorch-v${PYTORCH_VERSION}.tar.gz \
+    && tar -xf /tmp/cache/download/pytorch-v${PYTORCH_VERSION}.tar.gz -C /src \
+    && rm -f /tmp/cache/download/pytorch-v${PYTORCH_VERSION}.tar.gz \
+    && mv /src/pytorch-v${PYTORCH_VERSION} /src/pytorch
+
+WORKDIR /src
 
 # setup build dir
 RUN mkdir -p /build
@@ -57,14 +62,14 @@ RUN mkdir -p /build
 ENV HIPCC_COMPILE_FLAGS_APPEND="-parallel-jobs=${NUM_CPU_CORES}"
 ENV HIPCC_LINK_FLAGS_APPEND="-parallel-jobs=${NUM_CPU_CORES}"
 
-WORKDIR /git/pytorch
+WORKDIR /src/pytorch
 RUN python tools/amd_build/build_amd.py
 RUN python setup.py bdist_wheel
-RUN cp /git/pytorch/dist/*.whl /build
+RUN cp /src/pytorch/dist/*.whl /build
 
 # Build torchvision
 ## install torch
-RUN pip install --no-cache-dir /git/pytorch/dist/torch-*.whl
+RUN pip install --no-cache-dir /src/pytorch/dist/torch-*.whl
 
 # prepare torchvision build
 # torchvision deps
@@ -80,17 +85,17 @@ RUN --mount=type=cache,target=/var/cache/apt,rw --mount=type=cache,target=/var/l
     libavformat-dev \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /git
+WORKDIR /src
 RUN git clone --depth 1 --branch v${PYTORCH_VISION_VERSION} --recursive https://github.com/pytorch/vision.git
 
-RUN mkdir /patches
-COPY patches /patches
+RUN mkdir -p /patches/torchvision
+COPY patches/torchvision /patches/torchvision
 
 # https://github.com/pytorch/vision/issues/7561
-RUN patch -Np1 -d /git/vision -i /patches/torchvision-fix_ROCm_build.patch
+RUN patch -Np1 -d /src/vision -i /patches/torchvision/fix_ROCm_build.patch
 
 ## generate wheel
-WORKDIR /git/vision
+WORKDIR /src/vision
 
 # fix bin/hipcc not found, because ROCM_HOME is lost
 # https://github.com/pytorch/vision/issues/6707#issuecomment-1269640873
@@ -100,13 +105,13 @@ RUN TORCHVISION_USE_NVJPEG=0 \
     TORCHVISION_USE_VIDEO_CODEC=0 \
     TORCHVISION_USE_FFMPEG=1 \
     python setup.py bdist_wheel
-RUN cp /git/vision/dist/*.whl /build
+RUN cp /src/vision/dist/*.whl /build
 
 # Build torchaudio
 ENV USE_FFMPEG=1
 
 # prepare torchaudio build
-WORKDIR /git
+WORKDIR /src
 RUN git clone --depth 1 --branch v${PYTORCH_AUDIO_VERSION} --recursive https://github.com/pytorch/audio.git
 
 # torchaudio deps
@@ -118,8 +123,8 @@ RUN --mount=type=cache,target=/var/cache/apt,rw --mount=type=cache,target=/var/l
     libavdevice-dev \
     && rm -rf /var/lib/apt/lists/*
 
-WORKDIR /git/audio
+WORKDIR /src/audio
 RUN CMAKE_PREFIX_PATH=/opt/rocm-${ROCM_VERSION} BUILD_SOX=1 USE_ROCM=1 python setup.py bdist_wheel
-RUN cp /git/audio/dist/*.whl /build
+RUN cp /src/audio/dist/*.whl /build
 
 WORKDIR /build
